{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 201,
  "lineage": "7db3c67f-166b-423c-7371-15d71aa40be4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http1-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0460d8a37d9bfd2a6",
            "domain": "vpc",
            "id": "eipalloc-0cf054122b70b2368",
            "instance": "i-085e62f5c4b6549fb",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0bcee2b3a4d279a6f",
            "private_dns": "ip-10-100-14-26.us-west-2.compute.internal",
            "private_ip": "10.100.14.26",
            "public_dns": "ec2-52-36-196-207.us-west-2.compute.amazonaws.com",
            "public_ip": "52.36.196.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http1-instance-http1-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http1",
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http2-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-04a28c11d7ce4ed5a",
            "domain": "vpc",
            "id": "eipalloc-063c95b12fe89b0dd",
            "instance": "i-026bc5dee5b8a13f1",
            "network_border_group": "us-west-2",
            "network_interface": "eni-095935af11d0db9ac",
            "private_dns": "ip-10-100-25-206.us-west-2.compute.internal",
            "private_ip": "10.100.25.206",
            "public_dns": "ec2-44-238-31-143.us-west-2.compute.amazonaws.com",
            "public_ip": "44.238.31.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http2-instance-http2-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http2",
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_http3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http3-1",
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-07a41d51c83a8b610",
            "domain": "vpc",
            "id": "eipalloc-03b559a0463baaf9a",
            "instance": "i-09635c749a090ef4f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0adb542bf2a8a72a4",
            "private_dns": "ip-10-100-40-188.us-west-2.compute.internal",
            "private_ip": "10.100.40.188",
            "public_dns": "ec2-44-235-241-135.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.241.135",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "public-http3-instance-http3-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.http3",
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http3",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http1-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e999cbd62129e3b1",
            "arn": "arn:aws:ec2:us-west-2:742886329884:instance/i-085e62f5c4b6549fb",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085e62f5c4b6549fb",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tester2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bcee2b3a4d279a6f",
            "private_dns": "ip-10-100-14-26.us-west-2.compute.internal",
            "private_ip": "10.100.14.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082cd487da984e335",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b8fecfbe99ec47e",
            "tags": {
              "Name": "instance-http1-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025d7d02a229c8f01",
              "sg-0273f1690af519f9f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http2-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e999cbd62129e3b1",
            "arn": "arn:aws:ec2:us-west-2:742886329884:instance/i-026bc5dee5b8a13f1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026bc5dee5b8a13f1",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tester2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-095935af11d0db9ac",
            "private_dns": "ip-10-100-25-206.us-west-2.compute.internal",
            "private_ip": "10.100.25.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04b4ae726895f2fca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090b6f9ad5e17147f",
            "tags": {
              "Name": "instance-http2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025d7d02a229c8f01",
              "sg-0273f1690af519f9f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "http3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance-http3-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e999cbd62129e3b1",
            "arn": "arn:aws:ec2:us-west-2:742886329884:instance/i-09635c749a090ef4f",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09635c749a090ef4f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "tester2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0adb542bf2a8a72a4",
            "private_dns": "ip-10-100-40-188.us-west-2.compute.internal",
            "private_ip": "10.100.40.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b8df912cb06d85a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0815d2e65c516c4e6",
            "tags": {
              "Name": "instance-http3-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-025d7d02a229c8f01",
              "sg-0273f1690af519f9f"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.administration",
            "aws_security_group.web",
            "aws_subnet.http3",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:internet-gateway/igw-0fe954d588d10d5e1",
            "id": "igw-0fe954d588d10d5e1",
            "owner_id": "742886329884",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e3dfba7ff26619ab",
            "owner_id": "742886329884",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fe954d588d10d5e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0793d722dfe385eef",
            "route_table_id": "rtb-0e3dfba7ff26619ab",
            "subnet_id": "subnet-06b8fecfbe99ec47e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http1",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff2d8442fcde05e6",
            "route_table_id": "rtb-0e3dfba7ff26619ab",
            "subnet_id": "subnet-090b6f9ad5e17147f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http2",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "http3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1ddaccc247d8f3f",
            "route_table_id": "rtb-0e3dfba7ff26619ab",
            "subnet_id": "subnet-0815d2e65c516c4e6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.http3",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "administration",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:security-group/sg-0273f1690af519f9f",
            "description": "Allow default administration service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0273f1690af519f9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "administration",
            "name_prefix": "",
            "owner_id": "742886329884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "administration"
            },
            "timeouts": null,
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:security-group/sg-025d7d02a229c8f01",
            "description": "Allow web incgress trafic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-025d7d02a229c8f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "742886329884",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:subnet/subnet-06b8fecfbe99ec47e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.100.0.0/20",
            "id": "subnet-06b8fecfbe99ec47e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742886329884",
            "tags": {
              "Name": "subnet-http1"
            },
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:subnet/subnet-090b6f9ad5e17147f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.100.16.0/20",
            "id": "subnet-090b6f9ad5e17147f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742886329884",
            "tags": {
              "Name": "subnet-http2"
            },
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "http3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:subnet/subnet-0815d2e65c516c4e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.100.32.0/20",
            "id": "subnet-0815d2e65c516c4e6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "742886329884",
            "tags": {
              "Name": "subnet-http3"
            },
            "vpc_id": "vpc-0befef4eaea80ce6e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:742886329884:vpc/vpc-0befef4eaea80ce6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-04f6e60971458e690",
            "default_route_table_id": "rtb-094efeda920b5679d",
            "default_security_group_id": "sg-0e31641b204a2e0d2",
            "dhcp_options_id": "dopt-ce0b58b6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0befef4eaea80ce6e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-094efeda920b5679d",
            "owner_id": "742886329884",
            "tags": {
              "Name": "vpc-terraform"
            }
          }
        }
      ]
    }
  ]
}